--- a/az-func/PnPCoreApi/PnPCoreApi.csproj
+++ b/az-func/PnPCoreApi/PnPCoreApi.csproj
@@ -6,8 +6,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7" />
-    <PackageReference Include="PnP.Core" Version="0.4.1-beta1" />
-    <PackageReference Include="PnP.Core.Auth" Version="0.4.1-beta1" />
+    <PackageReference Include="PnP.Core" Version="1.3.80-nightly" />
+    <PackageReference Include="PnP.Core.Auth" Version="1.3.80-nightly" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
